[gd_scene load_steps=2 format=3 uid="uid://dux3olsrhkkkf"]

[ext_resource type="Script" uid="uid://cch1t52jqfcpd" path="res://scenes/menus/pause_screen.gd" id="1_i2fkk"]

[node name="PauseScreen" type="CanvasLayer"]
script = ExtResource("1_i2fkk")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.952941, 0.952941, 0.168627)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ResumeButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 2
text = "Restart"

[node name="DemoButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 2
text = "Play Demo"

[node name="MainMenuButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 2
text = "Main Menu"

[node name="OptionsButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 2
text = "Quit"
